2009-08-12  Elchonon Edelson <eee@users.sourceforge.net>

	* tkchat.tcl: Fix [Bug 2814771]. In color configuration dialog,
	the wrong row was being given the weight for resize.

2009-07-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Do not post when in lurk mode (handle bindings).

2009-06-02  Reinhard Max  <max@suse.de>

	* tkchat.tcl (::tkchat::Progress): Improved progress bar handling.
	This hopefully fixes the occasional spinning of the progress bar
	when the associated action has long finished.

2009-05-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fixed string/list confusion in the message parsing
	that mishandled nick changes from irc.

2009-05-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Tidied up feature discovery and xep0115 caps support
	and ensure we handle conversation threads for chat sessions.

2009-05-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Improve the response to subscription requests and
	display the roster in the user list with an option to hide this.

2009-05-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added a muc join hook, ignore empty messages with
	chatstate notifications in chat windows. Some themeing on the
	colour dialog.
	* tkchat_power.tcl: Support detection of suspend/resume.

2009-04-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

 	* tkchat.tcl: removed misguided xml quoting from nicks and fixed a
	bug that prevented sending to a backslashed nick.
	* tkchat.tcl: tighten up our handling of jids by making more use
	of the jidsplit and jidequal functions.

2009-04-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Applied MacOSX patch from Daniel Steffen

2009-03-10  Reinhard Max  <max@suse.de>

	* tkchat.tcl (::tkchat::DoAnim): Only animate GIF images.

2009-03-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: [FR 2605849] Explicitly set the application name.
